# okmp-firmware

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  LICENSE-BSD-3  README.md
cmake/: gcc-arm-none-eabi.cmake
src/: display.c  display.h  gui.c  gui.h  input.c  input.h  led.c  led.h  main.c  main.h  modes.h  output.c  output.h  pin_defs.h
src/freertos/: FreeRTOSConfig.h  freertos.c  freertos.h
src/is31fl3731/: is31fl3731.c  is31fl3731.h  is31fl3731_defs.h
src/sh1106/: sh1106.c  sh1106.h  sh1106_defs.h
src/stm32f411/: gpio.c  gpio.h  i2c.c  i2c.h  spi.c  spi.h
src/usb/: tusb_config.h  usb_descriptors.c
tests/: CMakeLists.txt  test_is31fl3731.c
